fixing parantheses toggle style on mobile

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -51,3 +51,7 @@ h2 {
     font-size: 20px;
   }
 }
+
+label {
+  font-family: sans-serif;
+}
